[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Traiano Welcome",email = "traiano@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "asset_processing_service", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
